# automower_tracker

./: Dockerfile  Dockerfile.frontend  README.md  docker-compose.yaml  pyproject.toml
automower_tracker/: api_debugger.py  automower_tracker.py  frontend.py  websocket_debugger.py
automower_tracker/templates/: index.html
