[tool.poetry]
name = "automower-tracker"
version = "0.1.0"
description = "Track Husqvarna Automower location and status data and store it in InfluxDB"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = "^2.32.3"
influxdb-client = "^1.48.0"
websocket-client = "^1.8.0"
python-dotenv = "^1.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"